virt/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    vm.kubevirt.io/name: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
