virt/winweb-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: winweb
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: winweb
