virt/winweb-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: winweb
spec:
  to:
    kind: Service
    name: winweb
    weight: 100
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
